migration to java 12, gradle 5, and newer versions of some dependencies