@@ -1,12 +1,29 @@
+plugins {
+	id 'application'
+	id 'org.openjfx.javafxplugin' version '0.0.7'
+}
 
-apply plugin: 'application'
 mainClassName = "at.jku.isse.ecco.gui.EccoGui"
-applicationDefaultJvmArgs = ["-ea", "-Xss1024m", "-Xmx8g"]
+applicationDefaultJvmArgs = ["-Xss1024m", "-Xmx8g"]
+
+run {
+	doFirst {
+		jvmArgs = [
+				'--module-path', classpath.asPath,
+				'--add-modules="javafx.controls,javafx.swing"'
+		]
+	}
+}
 
 task runTest(type: JavaExec, dependsOn: classes, group: 'application') {
 	main = "at.jku.isse.ecco.gui.EccoGui"
 	jvmArgs += ["-ea", "-Xss1024m", "-Xmx8g"]
 	classpath = sourceSets.test.runtimeClasspath
+}
+
+javafx {
+	version = "12.0.1"
+	modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.web', 'javafx.media', 'javafx.swing']
 }
 
 dependencies {
